--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>Webclass</title>
 </head>
 <body>
-    <p>Hello World</p>
-    <!--practice on how to use HTML tags-->
-    <a href="https://www.google.com"></a>
-    <bold>You are welcome</bold><br>
-    <big>Big Text</big>
-    <center>Center Tag</center>
+    <p style="color:red;">Hello world</p>
+    <p style="color:red; font-size:45px">Hello world</p>
 </body>
 </html>
