--- a/register.html
+++ b/register.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+      
+    </style>
 </head>
 <body>
     <form action="Login.html" method="GET">
@@ -12,11 +15,11 @@
 
       <label>Email:</label><br>
       <input type="email" name="email" required><br><br>
-
-      <label>Password:</label><br>
+       <label>Password:</label><br>
       <input type="password" name="password" required><br><br>
-
-      <button type="submit">Register</button>
+      <button type="submit" style="margin:px; padding:8px 15px">Register</button>
     </form>
 </body>
-</html>
+</html>   
+
+    
