--- a/class4.html
+++ b/class4.html
@@ -7,7 +7,7 @@
     <!-- Google Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--CSS-->
-    <link rel="stylesheet" href="h.css">
+    <link rel="stylesheet" href="class4.css">
 </head>
 <body>
     <div class="container">
@@ -31,7 +31,7 @@
           <div class="grid">
 
               <!--1st Content-->
-            <div class="class green">
+            <div class="card green">
                <span class="material-icons icon">group</span>
                <h3>Register</h3>
                <p>Behaviour</p> 
@@ -58,7 +58,7 @@
                 <p>SIF Alert</p>
             </div>
 
-            <!--5th content-->
+            <!--5th content-->  
             <div class="card blue">
                 <span class="material-icons icon">location_on</span>
                 <h3>View Site Location</h3>
